@@ -296,21 +296,32 @@ $(function() {
   /* Show rsyslog only fields, or hide them */
   function show_custom_conf(mode, listening_mode, filebeat_listening_mode) {
     /* If it is an UDP mode only => HAProxy is useless */
-    if( (mode === "log" && (listening_mode === "udp" || listening_mode === "file" || listening_mode === "api" || listening_mode === "kafka" || listening_mode === "redis")) || (mode === "filebeat" && (filebeat_listening_mode === "udp" || filebeat_listening_mode === "file" || filebeat_listening_mode === "api")) ) {
+    if( (mode === "log" && ["udp", "file", "api", "kafka", "redis"].includes(listening_mode)) ||
+        (mode === "filebeat" && ["udp", "file", "api"].includes(filebeat_listening_mode)) ) {
       $('.haproxy-conf').hide();
     } else {
       $('.haproxy-conf').show();
     }
   }
 
-
   /* Show fields, or hide them, depending on chosen listening mode */
   function show_listening_mode(mode, listening_mode, filebeat_listening_mode) {
     /* If listening mode is TCP, show according options */
-    if (mode === "log" && (listening_mode === "tcp" || listening_mode === "tcp,udp" || listening_mode === "relp")) {
+    if (mode === "log" && ["tcp", "tcp,udp", "relp"].includes(listening_mode)) {
       $('.listening-tcp').show();
     } else {
       $('.listening-tcp').hide();
+    }
+  }
+
+  /* Show node field, or hide them, depending on chosen listening mode */
+  function show_node(mode, listening_mode, filebeat_listening_mode) {
+    /* If listening mode is TCP, show according options */
+    if( (mode === "log" && ["file", "api", "kafka", "redis"].includes(listening_mode)) ||
+    (mode === "filebeat" && ["file", "api"].includes(filebeat_listening_mode)) ) {
+      $('#node-div').show();
+    } else {
+      $('#node-div').hide();
     }
   }
 
@@ -318,11 +329,9 @@ $(function() {
     var first = true;
     if((mode === "log") || (mode === "filebeat") ){
       $('#ruleset-div').show();
-      $('#id_node').show();
     }
     else {
       $('#ruleset-div').hide();
-      $('#id_node').hide();
       if((mode === "log" && listening_mode === "api") || (mode === "filebeat" && filebeat_listening_mode === "api") ){
         // Bind API inputs
         $("#tab_api_client input").each(function(){
@@ -432,6 +441,7 @@ $(function() {
     show_custom_conf(mode, $('#id_listening_mode').val(), $('#id_filebeat_listening_mode').val());
     show_listening_mode(mode, $('#id_listening_mode').val(), $('#id_filebeat_listening_mode').val());
     show_network_conf(mode, $('#id_listening_mode').val(), $('#id_filebeat_listening_mode').val());
+    show_node(mode, $('#id_listening_mode').val(), $('#id_filebeat_listening_mode').val());
     show_log_condition_failure();
     old_mode = mode;
   }).trigger('change');
@@ -558,6 +568,7 @@ $(function() {
     show_custom_conf($('#id_mode').val(), $(this).val(), $('#id_filebeat_listening_mode').val());
     show_listening_mode($('#id_mode').val(), $(this).val(), $('#id_filebeat_listening_mode').val());
     show_network_conf($('#id_mode').val(), $(this).val(), $('#id_filebeat_listening_mode').val());
+    show_node($('#id_mode').val(), $(this).val(), $('#id_filebeat_listening_mode').val());
     refresh_input_logs_type($('#id_mode').val(), $(this).val(), $('#id_filebeat_listening_mode').val());
   }).trigger('change');
 
@@ -566,6 +577,7 @@ $(function() {
     show_custom_conf($('#id_mode').val(), $('#id_listening_mode').val(), $(this).val());
     show_listening_mode($('#id_mode').val(), $('#id_listening_mode').val(), $(this).val());
     show_network_conf($('#id_mode').val(), $('#id_listening_mode').val(), $(this).val());
+    show_node($('#id_mode').val(), $('#id_listening_mode').val(), $(this).val());
     refresh_input_logs_type($('#id_mode').val(), $('#id_listening_mode').val(), $(this).val());
   }).trigger('change');
 
