@@ -212,7 +212,7 @@
                         </div>
                       </div>
                     </div> <!-- /.row log-mode -->
-                    <div class="row log-mode filebeat-mode filebeat-api-mode file-mode kafka-mode redis-mode api-mode">
+                    <div class="row log-mode" id="node-div">
                       <div class="col-md-12">
                         <div class="form-group">
                           <label class="col-sm-4 control-label">{{ form.node.label }}</label>
